# tethys_dask_scheduler

./: .gitignore  .travis.yml  LICENSE  README.md  coverage.cfg  setup.cfg  setup.py  test.sh  tox.ini
conda_recipe/: meta.yaml
dask_scheduler/: tethys_dask_scheduler.py
tests/: test_tethys_dask_scheduler.py
tethys_dask_scheduler/: dask_scheduler.py  plugin.py  tethys_scheduler_plugin.py
