[metadata]
name = tethys_dask_scheduler
version = 2.0.0
description = A Dask scheduler with custom SchedulerPlugins to support integration with Tethys Platform
author = Nathan Swain
author_email = nswain@aquaveo.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
url = https://github.com/tethysplatform/tethys_dask_scheduler
project_urls = 
    Documentation = http://docs.tethysplatform.org/en/stable/tutorials/dask/setup_scheduler.html
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires = 
    click
    distributed

[options.packages.find]
exclude = tests

[options.extras_require]
tests = 
    tox

[coverage:run]
source = tethys_dask_scheduler
omit = *.egg-info, tests/*

[flake8]
max-line-length = 120
exclude = .git,build,dist,__pycache__,.eggs,*.egg-info

[tool:pytest]
addopts = --cov=tethys_dask_scheduler --cov-append --cov-report=term-missing

[tox:tox]
isolated_build = True
envlist = py39, flake8, clean

[testenv]
deps = 
    pytest
    pytest-cov
commands = 
    pytest tests

[testenv:flake8]
skip_install = True
deps = 
    flake8
commands = 
    flake8 tethys_dask_scheduler

[testenv:clean]
skip_install = True
deps = 
    coverage
commands = 
    coverage erase
